# 1142_HCI_Midterm

./: .gitignore  AGENTS.md  DATASET_FEATURES.md  README.md  REPORT.md  analysis_limits.example.json  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/: .gitignore  01_RESEARCH_MOTIVATION.md  01_RESEARCH_MOTIVATION.qmd  02_RESEARCH_METHODS.md  02_RESEARCH_METHODS.qmd  03_RESULTS.md  03_RESULTS.qmd  04_UNEXPECTED_OBSERVATIONS.md  04_UNEXPECTED_OBSERVATIONS.qmd  05_CONCLUSIONS_AND_RECOMMENDATIONS.md  05_CONCLUSIONS_AND_RECOMMENDATIONS.qmd  README.md  _quarto.yml  configuration.md  deployment.md  features.md  index.qmd  metadata.yaml  stackoverflow_README.md  stackoverflow_analysis_plan.md  stackoverflow_overview.md  stackoverflow_quickref.md  testing.md
output/: analysis_results.json
scripts/: bigquery_queries.py  generate-pdf.sh  run_analysis.py  start.sh  test.sh
src/: __init__.py  config.py  sna_runner.py
src/analysis/: __init__.py  account_age.py  badge_network.py  bounty_network.py  centrality.py  comment_network.py  connected_components.py  content_features.py  core_efficiency.py  edit_collaboration.py  post_link.py  review_task.py  tag_cooccurrence.py  time_series.py  user_location.py  voting_behavior.py
src/data/: __init__.py  bigquery_client.py  data_loader.py
src/models/: __init__.py  graph_builder.py
src/utils/: __init__.py  helpers.py
src/visualization/: __init__.py  plots.py
tests/: conftest.py  test_analysis.py
